[workspace]
members = [
    "serialize",
    "serialize-derive",

    "ff-macros",
    "ff-asm",
    "ff",

    "ec",
    "bench-templates",

    "poly",
    "test-curves",
    "test-templates",
]
exclude = ["curves/**"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = [ "arkworks contributors" ]
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT", "doc/katex-header.html"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[workspace.metadata.docs.rs]
rustdoc-args = [ "--html-in-header katex-header.html" ]

[workspace.metadata.release]
dependent-version = "fix"

[workspace.dependencies]
ark-ec = { version = "0.5.0", path = "./ec", default-features = false }
ark-ff = { version = "0.5.0", path = "./ff", default-features = false }
ark-ff-asm = { version = "0.5.0", path = "./ff-asm" }
ark-ff-macros = { version = "0.5.0", path = "./ff-macros" }
ark-poly = { version = "0.5.0", path = "./poly", default-features = false }
ark-serialize = { version = "0.5.0", path = "./serialize", default-features = false }
ark-serialize-derive = { version = "0.5.0", path = "./serialize-derive" }
ark-std = { version = "0.5.0", default-features = false }

ark-algebra-bench-templates =  { version = "0.5.0", path = "./bench-templates", default-features = false }
ark-algebra-test-templates = { version = "0.5.0", path = "./test-templates", default-features = false }
ark-test-curves = { version = "0.5.0", path = "./test-curves", default-features = false }

num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }

arrayvec = { version = "0.7", default-features = false }
criterion = "0.5.0"
educe = "0.6.0"
digest = { version = "0.10", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["inline-more", "allocator-api2"] }
hex = "0.4"
itertools = { version = "0.13", default-features = false }
libtest-mimic = "0.8.1"
paste = "1.0"
rayon = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
blake2 = { version = "0.10", default-features = false }
zeroize = { version = "1", default-features = false }

proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
