[package]
name = "ark-algebra-benches"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

################################# Dependencies ################################

[dependencies]
ark-ff = { path = "../ff" }
ark-ec = { path = "../ec" }
ark-serialize = { path = "../serialize" }

ark-mnt4-298 = { path = "../curves/mnt4_298", optional = true }
ark-mnt6-298 = { path = "../curves/mnt6_298", optional = true }
ark-mnt4-753 = { path = "../curves/mnt4_753", optional = true }
ark-mnt6-753 = { path = "../curves/mnt6_753", optional = true }
ark-bn254 = { path = "../curves/bn254", default-features = false, optional = true }
ark-bls12-377 = { path = "../curves/bls12_377", optional = true }
ark-bls12-381 = { path = "../curves/bls12_381", optional = true }
ark-bw6-761 = { path = "../curves/bw6_761", optional = true }
ark-cp6-782 = { path = "../curves/cp6_782", optional = true }

blake2 = "0.8.1"
rand = "0.7"
rand_xorshift = { version = "0.2" }
paste = "1.0"

[features]
asm = [ "ark-ff/asm"]
n_fold = []

[build-dependencies]
rustc_version = "0.2"
