[package]
name = "ark-algebra-bench-templates"
version = "0.4.0-alpha.6"
authors = [ "arkworks contributors" ]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

################################# Dependencies ################################

[dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ] }
ark-std = { version = "0.4.0-alpha", default-features = false }
ark-ec = { version = "0.4.0-alpha", path = "../ec", default-features = false }
ark-ff = { version = "0.4.0-alpha", path = "../ff", default-features = false }
ark-serialize = { version = "0.4.0-alpha", path = "../serialize", default-features = false }
paste = { version = "1.0" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]
