[package]
name = "ark-algebra-bench-templates"
description = "A benchmark library for finite fields and elliptic curves"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
documentation = "https://docs.rs/ark-algebra-bench-templates/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true


################################# Dependencies ################################

[dependencies]
criterion = { workspace = true, features = [ "html_reports" ] }
ark-std.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
paste.workspace = true

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]
