[package]
name = "ark-bls12-377"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "arkworks contributors"
]
description = "The BLS12-377 pairing-friendly elliptic curve (and related curves)"
homepage = "https://arworks.rs"
repository = "https://github.com/arkworks/algebra"
documentation = "https://docs.rs/ark-bls12-377/"
keywords = ["cryptography", "finite fields" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { path = "../ff", default-features = false }
ark-ec = { path = "../ec", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[dev-dependencies]
ark-serialize = { path = "../serialize", default-features = false }
ark-algebra-tests = { path = "../algebra-tests", default-features = false }
rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"

[features]
default = [ "std", "bls12_377" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

bls12_377 = [ "bls12_377_fr", "bls12_377_fq" ]
bls12_377_fr = []
bls12_377_fq = []

ed_on_bls12_377 = [ "bls12_377_fr" ]

bw6_761 = [ "bls12_377_fq" ]
ed_on_bw6_761 = [ "ed_on_cp6_782" ]

cp6_782 = [ "bls12_377_fq" ]
ed_on_cp6_782 = [ "bls12_377_fq" ]