[package]
name = "ark-bn254"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "arkworks contributors"
]
description = "The BN254 pairing-friendly elliptic curve (and related curves)"
homepage = "https://arworks.rs"
repository = "https://github.com/arkworks/algebra"
documentation = "https://docs.rs/ark-bn254/"
keywords = ["cryptography", "finite fields" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { path = "../ff", default-features = false }
ark-ec = { path = "../ec", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

[dev-dependencies]
ark-serialize = { path = "../serialize", default-features = false }
rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"

[features]
default = [ "std", "bn254" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std" ]

bn254 = [ "bn254_fr" ]
bn254_fr = []

ed_on_bn254 = [ "bn254_fr" ]