[package]
name = "ark-ec"
version = "0.4.2"
authors = [ "arkworks contributors" ]
description = "A library for elliptic curves and pairings"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-ec/"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "doc", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2-alpha.1", path = "../serialize", default-features = false }
ark-ff = { version = "0.4.2-alpha.1", path = "../ff", default-features = false }
ark-poly = { version = "0.4.2-alpha.1", path = "../poly", default-features = false }
derivative = { version = "2", features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
hashbrown = "0.13.1"
itertools = { version = "0.10", default-features = false }

[dev-dependencies]
ark-test-curves = { version = "0.4.2-alpha.1", path = "../test-curves", default-features = false, features = ["bls12_381_curve"] }
sha2 = { version = "0.10", default-features = false }
libtest-mimic = "0.6.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
hex = "0.4"

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std" ]
parallel = [ "std", "rayon", "ark-std/parallel" ]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/katex-header.html"]
