[package]
name = "ark-ec"
description = "A library for elliptic curves and pairings"
documentation = "https://docs.rs/ark-ec/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
metadata.release.workspace = true
keywords = ["cryptography", "elliptic-curves", "pairing"]

[dependencies]
ark-std.workspace = true
ark-serialize.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
derivative = { workspace = true, features = ["use_core"] }
num-bigint.workspace = true
num-traits.workspace = true
rayon = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
hashbrown.workspace = true
itertools.workspace = true

[dev-dependencies]
ark-test-curves = { workspace = true, features = ["bls12_381_curve"] }
sha2.workspace = true
libtest-mimic.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
hex.workspace = true

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std" ]
parallel = [ "std", "rayon", "ark-std/parallel" ]
