[package]
name = "ark-ff-macros"
version = "0.4.2"
authors = [ "arkworks contributors" ]
description = "A library for generating x86-64 assembly for finite field multiplication"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-ff-asm/"
keywords = ["cryptography", "finite-fields", "assembly" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
quote = "1.0.0"
proc-macro2 = { version = "1" }
syn = { version = "1.0.0", features = ["full", "parsing", "extra-traits"]}
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }

[lib]
proc-macro = true
