[package]
name = "ark-ff-macros"
description = "A library for generating x86-64 assembly for finite field multiplication"
documentation = "https://docs.rs/ark-ff-macros/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
package.metadata.release.workspace = true
keywords = ["cryptography", "finite-fields", "assembly" ]

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full", "parsing", "extra-traits"]}
num-bigint.workspace = true
num-traits.workspace = true

[lib]
proc-macro = true
