[package]
name = "ark-ff"
version = "0.4.2"
authors = [ "arkworks contributors" ]
description = "A library for finite fields"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/algebra"
documentation = "https://docs.rs/ark-ff/"
keywords = ["cryptography", "finite-fields" ]
categories = ["cryptography"]
include = ["Cargo.toml", "build.rs", "src", "doc", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
ark-ff-asm = { version = "0.4.2-alpha.1", path = "../ff-asm" }
ark-ff-macros = { version = "0.4.2-alpha.1", path = "../ff-macros" }
ark-std = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2-alpha.1", path = "../serialize", default-features = false }
derivative = { version = "2", features = ["use_core"] }
num-traits = { version = "0.2", default-features = false }
paste = "1.0"
rayon = { version = "1", optional = true }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
num-bigint = { version = "0.4", default-features = false }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
itertools = { version = "0.10", default-features = false }

[dev-dependencies]
ark-test-curves = { version = "0.4.2-alpha.1", path = "../test-curves", default-features = false, features = [ "bls12_381_curve", "mnt6_753", "secp256k1"] }
blake2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
libtest-mimic = "0.6.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
hex = "0.4"

[build-dependencies]
rustc_version = "0.4"

[features]
default = []
std = [ "ark-std/std", "ark-serialize/std", "itertools/use_std" ]
parallel = [ "std", "rayon", "ark-std/parallel" ]
asm = []


[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./doc/katex-header.html"]
