[package]
name = "ark-ff"
description = "A library for finite fields"
keywords = ["cryptography", "finite-fields" ]
documentation = "https://docs.rs/ark-ff/"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
metadata.docs.rs.workspace = true
package.metadata.release.workspace = true

[dependencies]
ark-ff-asm.workspace = true
ark-ff-macros.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
arrayvec.workspace = true
educe.workspace = true
num-traits.workspace = true
paste.workspace = true
rayon = { workspace = true, optional = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
num-bigint.workspace = true
digest = { workspace = true, features = ["alloc"] }
itertools.workspace = true

# [dev-dependencies]
# ark-test-curves = { workspace = true, features = [ "bls12_381_curve", "mnt6_753", "secp256k1"] }
# blake2.workspace = true
# sha3.workspace = true
# sha2.workspace = true
# libtest-mimic.workspace = true
# serde.workspace = true
# serde_json.workspace = true
# serde_derive.workspace = true
# hex.workspace = true

[features]
default = []
std = [ "ark-std/std", "ark-serialize/std", "itertools/use_std" ]
parallel = [ "std", "rayon", "ark-std/parallel", "ark-serialize/parallel" ]
asm = []
